# nuclear-grid-risk

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 208fae8bb35d_add_simulation_runs_and_events.py  57f161de28c6_change_asset_criticality_to_float.py  75484be13d27_create_assets_and_dependencies_tables.py  837c4feae5e6_add_unique_constraint_to_dependencies.py  a6eb371530ad_add_scenarios_table.py
app/: main.py
app/core/: config.py  database.py  logging.py
app/graph/: builder.py  metrics.py  network_analysis.py  schemas.py  traversal.py
app/models/: __init__.py  asset.py  dependency.py  scenario.py  simulation_run.py
app/schemas/: __init__.py  asset.py  dependency.py  failure_simulation.py  high_risk_simulation_run.py  scenario.py  scenario_simulation.py  simulation_run.py  simulation_run_analytics.py
app/services/: failure_impact_service.py  scenario_service.py  scenario_simulation_service.py  simulation_run_service.py  (+1 more)
docs/: FOUNDATION.md  simulation_engine.md
tests/: conftest.py  test_assets.py  test_config.py  test_database.py  test_dependencies.py  test_failure_impact_service.py  test_failure_simulation_api.py  test_graph_analysis_api.py  test_graph_api.py  test_graph_builder.py  test_graph_metrics.py  test_graph_traversal.py  test_graph_traversal_api.py  test_health.py  test_high_risk_simulation_runs_api.py  test_network_analysis.py  test_scenario_management_api.py  test_scenario_simulation_api.py  test_simulation_run_metrics_api.py  test_simulation_run_persistence_api.py
(+7 files in other folders)
